--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+   font-family: "Nunito";
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.containers {
+  position: relative;
+  width: 100%;
+  overflow:hidden;
+   border-radius:50%;
+   
+}
+.main{
+  border:0.5px solid white;
+  padding: 1rem;
+  /* transition: .5s ease; */
+  border-radius: 50%;
+}
+
+.image {
+
+  width: 100%;
+  height: auto;
+ 
+  
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(90deg, #007AFF -11.43%, #4CB7DC 47.09%, #9DF8B6 127.28%);
+
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+
+}
+
+.containers:hover .overlay {
+  height: 25%;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.main:hover{
+ border: 0.5px solid  #4CB7DC ;
+padding: 1rem;
+border-radius: 50%;
+transition: all .5s linear;
 }
